fix: delete z-index on the avatar popup

--- a/src/blocks/profile/__avatar-button/profile__avatar-button.css
+++ b/src/blocks/profile/__avatar-button/profile__avatar-button.css
@@ -19,7 +19,6 @@
   bottom: 0;
   left: 0;
   right: 0;
-  z-index: 1;
   transition: background-color 300ms;
 }
 
